--- a/background.tex
+++ b/background.tex
@@ -8,6 +8,7 @@ The bitcoin protocol \cite{bitcoin-core} specifies a set of rules that enable th
 Every time a user wants to spend bitcoin he needs to create and then broadcast a transaction to the network. A bitcoin transaction consists of at least one input and one output, summarized formats for these data structures are depicted by tables \ref{table:tx_input} and \ref{table:tx_output}.
 
 \begin{table}[H]
+\centering
 \resizebox{\columnwidth}{!}{\begin{tabular}{|l|l|}
 \hline
 \rowcolor[HTML]{C0C0C0} 
@@ -21,6 +22,7 @@ Unlock script & A script that unlocks the bitcoin
 \end{table}
 
 \begin{table}[H]
+\centering
 \begin{tabular}{|l|l|}
 \hline
 \rowcolor[HTML]{C0C0C0} 
