--- a/routing.tex
+++ b/routing.tex
@@ -53,6 +53,7 @@ Throughout the rest of this section, we will use the example network represented
 Nodes populate their initial routing table with the information they have locally available, this is, the information about the distribution of the funds in the channels in which they take part. These entries are never removed from local memory and should always reflect the state of the underlying payment channels. Table \ref{table:routing_table_initial_a} and represents the initial \acrshort{ldr} routing tables of node A.
 
 \begin{table}[H]
+\centering
 \begin{tabular}{|l|l|l|l|}
 \hline
 \rowcolor[HTML]{C0C0C0} 
@@ -67,6 +68,7 @@ C           & 1             & 0.01  & C       \\ \hline
 Nodes will then start sharing routing gossip messages containing part or the entirety of their own routing tables. To sharing more about a node's neighbourhood than needed, information about the next hops is omitted from the gossip messages. Table \ref{table:routing_gossip} is an example of what a gossip message based on Node A's initial routing table (\ref{table:routing_table_initial_a}) might look like.
 
 \begin{table}[H]
+\centering
 \begin{tabular}{|l|l|l|}
 \hline
 \rowcolor[HTML]{C0C0C0} 
@@ -92,6 +94,7 @@ From the second rule follows that the amount of locally stored entries for each 
 After enough routing gossip messages are shared the network will eventually reach a steady-state where new gossip messages do not change any of the information already available in the locally stored routing tables. Table \ref{table:routing_table_steady_a} represent the routing tables for node A after the steady-state is reached.
 
 \begin{table}[H]
+\centering
 \begin{tabular}{|l|l|l|l|}
 \hline
 \rowcolor[HTML]{C0C0C0} 
@@ -109,6 +112,7 @@ After the steady-state is reached the network must be able to adapt to the frequ
 For example, if A sends 1 BTC to B, making their shared their channel state become (A: 1, B: 2), both nodes will reevaluate their routing tables focusing on the entries in which the next hop is the neighbour that shares the channel in which the payment took place. These reevaluation yields routing table \ref{table:routing_table_payment_a}.
 
 \begin{table}[H]
+\centering
 \begin{tabular}{|l|l|l|l|}
 \hline
 \rowcolor[HTML]{C0C0C0} 
@@ -125,6 +129,7 @@ D           & 1             & 0.06  & C       \\ \hline
 The information present in these updated routing tables is then shared through gossip messages with A's and B's neighbours and eventually propagated through the entire network until another steady-state is reached. Routing tables \ref{table:routing_table_steady_a_2} represent node A's table at this second steady-state.
 
 \begin{table}[H]
+\centering
 \begin{tabular}{|l|l|l|l|}
 \hline
 \rowcolor[HTML]{C0C0C0} 
