--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,7 @@ Email: joaosvalente@tecnico.ulisboa.pt}
 \input{abstract.tex}
 \input{introduction.tex}
 \input{background.tex}
-\input{routing.tex}
+\input{ldr.tex}
 \input{simulation.tex}
 \input{conclusions.tex}
 \input{biblio.tex}
