--- a/refs.bib
+++ b/refs.bib
@@ -43,12 +43,34 @@ Scalable Off-Chain Instant Payments}},
  url = {https://www.xarg.org/ref/a/1491954388/}
 }
 
+@misc{bitcoin_protocol_doc,
+    author = "{Bitcoin Wiki contributors}",
+    title = "Bitcoin Protocol Documentation",
+    year = "2011",
+    howpublished = "\url{https://en.bitcoin.it/wiki/Protocol_documentation}",
+    note = "[Online; accessed 13-November-2019]"
+}
+
 @misc{bitcoin_script,
     author = "{Bitcoin Wiki contributors}",
     title = "Bitcoin Script Documentation",
-    year = "2010",
+    year = "2011",
     howpublished = "\url{https://en.bitcoin.it/wiki/Script}",
     note = "[Online; accessed 13-November-2019]"
+}
+
+@misc{bch,
+  author = {Bitcoincash.org},
+  title = {{BCH}},
+  howpublished = "\url{https://www.bitcoincash.org/}",
+  note = "[Online; accessed 28-November-2019]"
+}
+
+@misc{bsv,
+  author = {bitcoinsv.io},
+  title = {{BSV}},
+  howpublished = "\url{https://bitcoinsv.io/}",
+  note = "[Online; accessed 28-November-2019]"
 }
   
 @misc{amp,
@@ -222,4 +244,10 @@ Scalable Off-Chain Instant Payments}},
   pages={1--12},
   year={2020},
   publisher={Springer}
+}
+
+@article{flare,
+  title={Flare: An Approach to Routing in Lightning Network White Paper},
+  author={Pavel Prihodko and Slava Zhigulin and Mykola Sahno and A. Ostrovskiy and O. Osuntokun},
+  year={2016}
 }
