--- a/simulation.tex
+++ b/simulation.tex
@@ -1,7 +1,8 @@
 \section{Simulation}
 
 In order to test \acrshort{ldr}'s performance and compare it with the lightning network's current routing solution, a payment routing simulator was developed \cite{simulator}. \\
-Using as its underlying network a snapshot of the real lighting network, the simulator is able to reproduce payments between different pairs of nodes using different routing schemes. To define the initial states of channels with capacity C, and since the state channel information of third party nodes is not public, all channels between two nodes A and B are initialized with the state (A: $\frac{C}{2}$, B: $\frac{C}{2}$). Lastly, and since they are not the focus of the study done by the simulation, the channel routing fee's are not contemplated by it.\\
+Using as its underlying network a snapshot of the real lighting network, the simulator is able to reproduce payments between different pairs of nodes using different routing schemes. To define the initial states of channels with capacity C, and since the state channel information of third party nodes is not public, all channels between two nodes A and B are initialized with the state (A: $\frac{C}{2}$, B: $\frac{C}{2}$), dividing the capacity $C$ of the channel equally between the two participating nodes' balances.\\
+Lastly, and since they are not the focus of the study done by the simulation, the channel routing fee's are not contemplated by it.\\
 
 The simulation has the following parameters:
 \begin{itemize}
@@ -10,7 +11,7 @@ The simulation has the following parameters:
     \item Mean weight
     \item Variance weight
 \end{itemize}
-The parameter that defines the number of nodes to be removed is used to control the size of the network, opening the possibility of making it smaller and thus easier to run simulations on. Nodes are removed randomly but as a result of working with a scale-free network there is an inherited robustness \cite{network_science} which reduces the resulting fragmentation to a minimum, a phenomenon that is studied in \cite{ln_topological}. When the network is fragmented as a result of the removal of nodes all the connected components but the one with the most nodes are removed so the simulation can run on a one component graph.\\
+The parameter that defines the number of nodes is used to control the size of the network, opening the possibility of making it smaller and thus easier to run simulations on. Nodes are removed randomly but as a result of working with a scale-free network there is an inherited robustness \cite{network_science} which reduces the resulting fragmentation to a minimum, a phenomenon that is studied in \cite{ln_topological}. When the network is fragmented as a result of the removal of nodes all the connected components but the one with the most nodes are removed so the simulation can run on a one component graph.\\
 $P$, the random variable that represents the amount for each payment, follows a normal distribution with free $(\mu,\,\sigma^{2})$ parameters. Both these parameters are determined using equations \ref{eq:distribution_mu} and \ref{eq:distribution_sigma}. 
 \begin{equation}
     \mu = Mean weight * Median Channel Balance
@@ -37,13 +38,14 @@ on the order of dozens of nodes. The number of gossip messages was set to 10 on 
 \resizebox{\columnwidth}{!}{\begin{tabular}{|l|l|l|l|l|}
 \hline
 \rowcolor[HTML]{C0C0C0} 
-\# Payments & \# Nodes to remove & Mean weight & Variance weight & \# Gossip Messages\\ \hline
+\# Payments & \# Nodes & Mean weight & Variance weight & \# Gossip Messages\\ \hline
 200 & 280 & 0.1 & 0.05 & 10\\ \hline
 \end{tabular}}
+\caption{Parameters for the first simulation}
 \label{table:simulation_params1}
 \end{table}
 
-After it goes through the node removal and address assignment processes the simulation returns figure \ref{fig:sim_net_addr}, an image representation of the network that will be used to simulate on.
+After it goes through the node removal and address assignment processes the simulation returns Figure \ref{fig:sim_net_addr}, an image representation of the network that will be used to simulate on.
 
 \begin{figure}[H]
 \begin{center}
@@ -53,20 +55,20 @@ After it goes through the node removal and address assignment processes the simu
   \end{center}
 \end{figure}
 
-The design of the address validation rules aims to promote a healthy network through similar addressing of nodes who are close together. The results of this effort are very noticeable in the network in figure \ref{fig:sim_net_addr} where there are various clusters of nodes who share addresses that are close in the address space. Nodes belonging to subnetworks 100.135.236.0/24, 172.155.7.0/24 and 47.114.77.0/24 can be found clustered together.\\
+The design of the address validation rules aims to promote a healthy network through similar addressing of nodes who are close together. The results of this effort are very noticeable in the network in Figure \ref{fig:sim_net_addr} where there are various clusters of nodes who share addresses that are close in the address space. Nodes belonging to subnetworks 100.135.236.0/24, 172.155.7.0/24 and 47.114.77.0/24 can be found clustered together.\\
 In the end, the simulation returned the routing metrics found in table \ref{table:simulation_results1}.
 
 \begin{table}[H]
 \centering
-\begin{tabular}{l|l|l|}
+\resizebox{\columnwidth}{!}{\begin{tabular}{l|l|l|}
 \cline{2-3}
 \rowcolor[HTML]{C0C0C0} 
-\cellcolor[HTML]{FFFFFF}                  & SPR     & LDR    \\ \hline
+\cellcolor[HTML]{FFFFFF}                  & \acrlong{spr}     & \acrlong{ldr}    \\ \hline
 \multicolumn{1}{|l|}{P(Success)}          & 61.0\%  & 61.5\% \\ \hline
 \multicolumn{1}{|l|}{P(Overcap|Failed)}   & 100.0\% & 97.4\% \\ \hline
 \multicolumn{1}{|l|}{P(NonExis|Failed)}   & 0.0\%   & 2.6\%  \\ \hline
 \multicolumn{1}{|l|}{\acrshort{apl}} & 3.56    & 3.75   \\ \hline
-\end{tabular}
+\end{tabular}}
 \caption{Results for the first simulation}
 \label{table:simulation_results1}
 \end{table}
@@ -83,7 +85,7 @@ The \acrfull{apl} is bigger when using \acrshort{ldr}. This is expected because,
 {\color[HTML]{000000} Median Channel Balance} & {\color[HTML]{000000} Payment's Distribution $\mu$} & {\color[HTML]{000000} Payment's Distribution $\sigma$} \\ \hline
 500000                                        & 50000                    & 2500                     \\ \hline
 \end{tabular}}
-\caption{Median channel balance and payment volume distribution parameters}
+\caption{Median channel balance and payment volume distribution parameters for the first simulation}
 \label{table:simulation_channel_info1}
 \end{table}
 
@@ -112,7 +114,7 @@ Figure \ref{fig:simulation_results4} portrays the result of the simulations.
 
 As the mean weight and consequently the payments' volumes increase there is also an increase in the value of $\overline{\Delta}$, restating the conclusion that \acrshort{ldr}'s advantage over the current implementation gets larger as the payments' volumes increase. This only happens up to a certain point though, after reaching a maximum the $\overline{\Delta}$ value starts falling. The reason for this is that, since payments are getting bigger, the probability that the number of possible paths between two nodes that support such voluminous payments starts decreasing, a fact supported by the decrease in the average P(Success) for both solutions and that ends up diminishing \acrshort{ldr}'s advantage of being able to route through bigger capacity paths because not even those are able to support the increasingly bigger volumes.\\
 Lastly, the effects of increasing the underlying network of the simulation were studied through the increase of the "Number of nodes" parameter while keeping the rest of table's \ref{table:simulation_params1} parametrization. Up to this point, all simulations were run with networks that were reduced to 280 nodes before the biggest component was chosen to be the base network of the simulation. Increasing the number of nodes the network is reduced to will increase the size of the biggest component and base network of the simulation. This also increases its running time due to the fact that each simulated node stores a routing table that can have information about each one of the other nodes, forming a performance quadratic upper bound, $\mathcal{O}(n^2)$.\\
-To solve this issue the number of simulations was scaled down from 100 to 10. The results are given by figure \ref{fig:simulation_results5}.\\
+To solve this issue the number of simulations was scaled down from 100 to 10. The results are given by Figure \ref{fig:simulation_results5}.\\
 
 \begin{figure}[H]
 \begin{center}
@@ -128,7 +130,7 @@ As the number of nodes increases the advantage of using \acrshort{ldr} over \acr
 	\item Every new node added to the network creates a new opportunity for an \acrshort{ldr} node to adapt its paths through it, possibly creating bigger capacity routes than the ones that were available before.
 \end{enumerate}
 
-As can already be noticed in figure \ref{fig:simulation_results5} the increase in \acrshort{spr}'s \acrshort{apl}, as a function of the number of nodes, slows down. In fact, when approximating the \acrshort{spr}'s \acrshort{apl} for the entire network with 4420 nodes the result was:
+As can already be noticed in Figure \ref{fig:simulation_results5} the increase in \acrshort{spr}'s \acrshort{apl}, as a function of the number of nodes, slows down. In fact, when approximating the \acrshort{spr}'s \acrshort{apl} for the entire network with 4420 nodes the result was:
  \begin{equation}
      \acrshort{apl} = 4.65
 \label{eq:ln_apl}
