FIxed simulation images.

--- a/simulation.tex
+++ b/simulation.tex
@@ -50,12 +50,12 @@ After it goes through the node removal and address assignment processes the simu
 \begin{figure}[H]
 \begin{center}
   \includegraphics[width=\linewidth]{images/sim_net_addr.png}
-  \caption{Network after address issuing}
+  \caption{Network after address assignment}
   \label{fig:sim_net_addr}
   \end{center}
 \end{figure}
 
-The design of the address validation rules aims to promote a healthy network through similar addressing of nodes who are close together. The results of this effort are very noticeable in the network in Figure \ref{fig:sim_net_addr} where there are various clusters of nodes who share addresses that are close in the address space. Nodes belonging to subnetworks 100.135.236.0/24, 172.155.7.0/24 and 47.114.77.0/24 can be found clustered together.\\
+The design of the address validation rules aims to promote a healthy network through similar addressing of nodes who are close together. The results of this effort are very noticeable in the network in Figure \ref{fig:sim_net_addr} where there are various clusters of nodes who share addresses that are close in the address space. Nodes belonging to subnetworks 77.230.4.0/24, 135.125.130.0/24 and 0.0.0.0/24 can be found clustered together.\\
 In the end, the simulation returned the routing metrics found in table \ref{table:simulation_results1}.
 
 \begin{table}[H]
