--- a/abstract.tex
+++ b/abstract.tex
@@ -2,6 +2,6 @@
 % in the abstract
 \begin{abstract}
 Bitcoin is a digital currency built on a decentralized, peer-to-peer, permissionless network. Bitcoin transactions are broadcast and then stored by every node in the network, presenting a scalability challenge for the technology. One of the solutions proposed to solve this scalability problem was the \acrfull{ln}, an overlay network layered on top of the bitcoin network in which transactions are not broadcast but instead routed through the network.\\
-This paper describes a new routing protocol called \acrfull{ldr} that can be used for transaction routing in the \acrshort{ln}. The goal of the protocol is to maximize the probability of successfully routing a transaction between a paying and a payee node while keeping the decentralized nature of the network, safeguarding performance and optimizing fees. This is achieved by splitting the work of finding a route between the nodes that constitute it, using and sharing each node's local knowledge of the network to make better routing decisions and achieve a bigger payment success probability.\\
-A high-level overview of \acrshort{ldr} is presented, its specifications are defined and used as the basis for the implementation of the protocol. Promising results are obtained after simulating \acrshort{ldr}'s performance and comparing it to the performance of the current implementation, with the biggest performance differences being felt on larger networks and higher volume payments.
+This paper describes a new routing protocol called \acrfull{ldr} that can be used for transaction routing in the \acrshort{ln}. The goal of the protocol is to maximize the probability of successfully routing a transaction between two nodes while keeping the decentralized nature of the network and safeguarding performance. This is achieved by splitting the work of finding a route between the nodes that constitute it, using and sharing each node's local knowledge of the network to make better routing decisions, thus achieving a higher payment success probability.\\
+Existing routing solutions are analyzed and a high-level overview of \acrfull{ldr} is presented. Promising results are obtained after simulating its performance and comparing it to the performance of the current implementation, with the biggest performance differences being felt on larger networks and higher volume payments.
 \end{abstract}
