--- a/glossaryEntries.tex
+++ b/glossaryEntries.tex
@@ -9,6 +9,7 @@
 \newacronym{ldr}{LDR}{Lighting Distributed Routing}
 \newacronym{spr}{SPR}{Shortest Path Routing}
 \newacronym{uc}{UC}{Used Capacity}
+\newacronym{sd}{SD}{Standard Deviation}
 \newacronym{apl}{APL}{Average Path Length}
 \newacronym{manet}{MANET}{Mobile Ad hoc Network}
 \newacronym{vpn}{VPN}{Virtual Private Network}
