--- a/simulation.tex
+++ b/simulation.tex
@@ -9,7 +9,7 @@ The simulation has the following parameters:
     \item Number of payments
     \item Number of nodes
     \item Mean weight
-    \item Variance weight
+    \item \acrfull{sd} weight
 \end{itemize}
 The parameter that defines the number of nodes is used to control the size of the network, opening the possibility of making it smaller and thus easier to run simulations on. Nodes are removed randomly but as a result of working with a scale-free network there is an inherited robustness \cite{network_science} which reduces the resulting fragmentation to a minimum, a phenomenon that is studied in \cite{ln_topological}. When the network is fragmented as a result of the removal of nodes all the connected components but the one with the most nodes are removed so the simulation can run on a one component graph.\\
 $P$, the random variable that represents the amount for each payment, follows a normal distribution with free $(\mu,\,\sigma^{2})$ parameters. Both these parameters are determined using equations \ref{eq:distribution_mu} and \ref{eq:distribution_sigma}. 
@@ -18,7 +18,7 @@ $P$, the random variable that represents the amount for each payment, follows a 
     \label{eq:distribution_mu}
 \end{equation}
 \begin{equation}
-    \sigma = Variance weight * Median Channel Balance
+    \sigma^2 = (SD weight * Median Channel Balance)^2
     \label{eq:distribution_sigma}
 \end{equation}
 \\
@@ -31,14 +31,14 @@ The number of entries associated with each destination in \acrshort{ldr} is kept
 The current source routing solution based on Dijkstra's shortest path algorithm has no free parameters.\\
 
 After some testing with the simulator parameters were set to the ones in table \ref{table:simulation_params1}. 200 payments were enough to obtain steady results, with the addition of more payments not resulting in clear output changes. The number of nodes was chosen so that the resulting networks could be big enough to be significant but no so big such that it slowed down the simulation beyond acceptable levels, resulting networks end up
-on the order of dozens of nodes. The number of gossip messages was set to 10 on the belief that on a real network there would be at least an order of magnitude more gossip messages than payments. Mean and variance weights were set to start low so payment volumes will be low and increase the chance of success for payments with the variance being half of the mean so the distribution is acceptably spread out.
+on the order of dozens of nodes. The number of gossip messages was set to 10 on the belief that on a real network there would be at least an order of magnitude more gossip messages than payments. Mean and standard deviation weights were set to start low so payment volumes will be low and increase the chance of success for payments with the standard deviation being half of the mean so the distribution is acceptably spread out.
 
 \begin{table}[H]
 \centering
 \resizebox{\columnwidth}{!}{\begin{tabular}{|l|l|l|l|l|}
 \hline
 \rowcolor[HTML]{C0C0C0} 
-\# Payments & \# Nodes & Mean weight & Variance weight & \# Gossip Messages\\ \hline
+\# Payments & \# Nodes & Mean weight & SD weight & \# Gossip Messages\\ \hline
 200 & 280 & 0.1 & 0.05 & 10\\ \hline
 \end{tabular}}
 \caption{Parameters for the first simulation}
@@ -91,11 +91,11 @@ The \acrfull{apl} is bigger when using \acrshort{ldr}. This is expected because,
 
 Table \ref{table:simulation_channel_info1} confirms that the median value of the channels' balances distribution is an order of magnitude larger than the payment's distribution $\mu$, making the channels' balances much bigger than the payment volumes and the \acrshort{ldr}'s advantages over the current implementation negligible. \\
 
-In order to have a better insight on how the difference in probability of success changes changes with the size of the payment's volume every parameter in table \ref{table:simulation_params1} was kept, with the exception of the mean and variance weights. Then the simulation was repeated 100 times for each of the different (MeanWeight, VarianceWeight) pair.
-The mean weight was then varied and the variance weight calculated as its function according to equation \ref{eq:variance_calc}.
+In order to have a better insight on how the difference in probability of success changes changes with the size of the payment's volume every parameter in table \ref{table:simulation_params1} was kept, with the exception of the mean and standard deviation weights. Then the simulation was repeated 100 times for each of the different (MeanWeight, SDWeight) pair.
+The mean weight was then varied and the standard deviation weight calculated as its function according to equation \ref{eq:sd_calc}.
 \begin{equation}
-    Variance weight = \frac{Mean weight}{2}
-    \label{eq:variance_calc}
+    SD weight = \frac{Mean weight}{2}
+    \label{eq:sd_calc}
 \end{equation}
 And $\overline{\Delta}$ defined as:
 \begin{equation}
