--- a/glossaryEntries.tex
+++ b/glossaryEntries.tex
@@ -13,7 +13,7 @@
 \newacronym{apl}{APL}{Average Path Length}
 \newacronym{manet}{MANET}{Mobile Ad hoc Network}
 \newacronym{vpn}{VPN}{Virtual Private Network}
-\newacronym{vppn}{VPPN}{Virtual Private Payment Payment}
+\newacronym{vppn}{VPPN}{Virtual Private Payment Network}
 \newglossaryentry{off-chain}
 {
     name=off-chain,
